tests/should-fail/semantics/return-int-literal-when-real-expected.j
function test takes nothing returns real
    return 1123477881
endfunction